# CCollections

./: CMakeLists.txt  INSTRUCTIONS.md  README.md  text.md
include/: SLLqueue.h  SLlist.h  array.h  array_sortings.h  basic.h  binsearchtree.h  daqueue.h  dastack.h  deque.h  dllist.h  list_sortings.h  sllist.h  sllqueue.h  sllstack.h
include/utils/: array_sortings.h  basic.h  list_sortings.h
src/: CMakeLists.txt  array.c  basic.c  binsearchtree.c  daqueue.c  dastack.c  deque.c  dllist.c  sllist.c  sllqueue.c  sllstack.c
